--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.124.4",
+    "joblib>=1.5.2",
     "loguru>=0.7.3",
+    "pandas>=2.3.3",
     "prometheus-client>=0.23.1",
     "pydantic-settings>=2.12.0",
+    "scikit-learn==1.7.2",
     "uvicorn>=0.38.0",
 ]
